--- a/src/main/webapp/citation-tools/apa/apa-website.html
+++ b/src/main/webapp/citation-tools/apa/apa-website.html
@@ -30,20 +30,9 @@
 </head>
 
 <body>
-<div style="text-align: center;padding: 32px">
+<div style="text-align: center;padding: 24px">
     <form>
-        <!--                <div class="mdl-textfield mdl-js-textfield mdl-textfield&#45;&#45;floating-label" style="padding-bottom: 28px;width: 100%"-->
-        <!--                     onkeyup="updateResult()">-->
-        <!--                    <input class="mdl-textfield__input" type="text" id="title">-->
-        <!--                    <label class="mdl-textfield__label" for="title">Title</label>-->
-        <!--                </div>-->
-        <!--                <div class="mdl-tooltip" style="text-align: left" for="title">-->
-        <!--                </div>-->
-        <!--                <br>-->
-
-
-        <br>
-        <div class="border" style="padding: 8px">
+        <div class="border" style="padding: 8px 16px 0 16px">
             <label style="color: darkred">Authors (choose one, comma separated list):</label>
             <!--        Author Name -->
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
@@ -79,7 +68,7 @@
         </div>
         <br>
 
-        <div class="border" style="padding: 8px">
+        <div class="border" style="padding: 8px 16px 0 16px">
             <label>Website information:</label>
             <!--        Article title -->
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
@@ -143,18 +132,25 @@
 
 
         <!--        Result -->
-
         <div class="border" style="padding: 8px;height: 42px">
             <label id="result"
                    class="float-left"
                    style="width: calc(100% - 32px);white-space:nowrap;overflow: hidden;text-overflow: ellipsis;padding-top: 4px;text-align: left"
-            ></label>
+            >Please type in more information!</label>
             <i class="float-right material-icons" onmouseover="reset()" id="tt_copy" style="outline: none"
                onclick="copyToClip(document.getElementById('result').innerHTML)">file_copy</i>
             <div class="mdl-tooltip" for="tt_copy" id="tt_copy_text">
             </div>
         </div>
         <br>
+        <br>
+        <br>
+        <br>
+        <div class="justify-content-center">
+            <button onclick="clearAll()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" style="outline: none">
+                Clear all
+            </button>
+        </div>
     </form>
 
     <script src="../../js/jquery.min.js"></script>
@@ -173,36 +169,15 @@
             var retrieved = $('#retrieved').val();
             document.getElementById('result').innerHTML = getApaSite(authors, organization, title, date, siteName, url, retrieved);
         }
-
-        function copyText() {
-            /* Get the text field */
-            var copyText = document.getElementById("result");
-
-            /* Select the text field */
-            copyText.select();
-            // copyText.setSelectionRange(0, 99999); /*For mobile devices*/
-
-            /* Copy the text inside the text field */
-            document.execCommand("copy");
-
-            // document.getElementById("tt_copy_text").innerHTML = "Copied!";
-        }
-
-        function copyToClip(str) {
-            function listener(e) {
-                e.clipboardData.setData("text/html", str);
-                e.clipboardData.setData("text/plain", str);
-                e.preventDefault();
-            }
-
-            document.addEventListener("copy", listener);
-            document.execCommand("copy");
-            document.removeEventListener("copy", listener);
-            document.getElementById("tt_copy_text").innerHTML = "Copied!";
-        };
-
-        function reset() {
-            document.getElementById("tt_copy_text").innerHTML = "Copy";
+        function clearAll() {
+            $('#authors')[0].parentElement.MaterialTextfield.change("");
+            $('#organization')[0].parentElement.MaterialTextfield.change("");
+            $('#title')[0].parentElement.MaterialTextfield.change("");
+            $('#date')[0].parentElement.MaterialTextfield.change("");
+            $('#siteName')[0].parentElement.MaterialTextfield.change("");
+            $('#url')[0].parentElement.MaterialTextfield.change("");
+            $('#retrieved')[0].parentElement.MaterialTextfield.change("");
+            document.getElementById('result').innerHTML = "Please type in more information!";
         }
     </script>
 </div>
