--- a/src/main/webapp/citation-tools-live.html
+++ b/src/main/webapp/citation-tools-live.html
@@ -94,35 +94,33 @@
     <div class="mdc-drawer-scrim"></div>
 
     <!-- Content -->
-    <main class="mdc-drawer-app-content main-content mdc-top-app-bar--fixed-adjust" id="parent"
-          style="height: fit-content">
+        <iframe id="apa-book" class="iframeClass" style="opacity: 0;position: fixed"
+                src="citation-tools/apa-book.html?#" onload="resizeIframe(this)" onchange="resizeIframe(this)"></iframe>
 
-        <iframe id="apa-book" class="iframeClass"
-                src="citation-tools/apa-book.html?#" onload="resizeIframe(this)"></iframe>
-
-        <iframe id="apa-website" class="iframeClass"
+        <iframe id="apa-website" class="iframeClass" style="opacity: 0;position: fixed"
                 src="citation-tools/apa-website.html?#" onload="resizeIframe(this)"></iframe>
 
-        <iframe id="ieee-book" class="iframeClass"
+        <iframe id="ieee-book" class="iframeClass" style="opacity: 0;position: fixed"
                 src="citation-tools/ieee-book.html?#" onload="resizeIframe(this)"></iframe>
 
-        <iframe id="ieee-website" class="iframeClass"
+        <iframe id="ieee-website" class="iframeClass" style="opacity: 0;position: fixed"
                 src="citation-tools/ieee-website.html?#" onload="resizeIframe(this)"></iframe>
 
-
-    </main>
 </div>
 
 
 <script>
     function resizeIframe(iframe) {
+        window.scrollTo(0,0)
         var body = iframe.contentWindow.document.body,
             html = iframe.contentWindow.document.documentElement;
         var height = Math.max(body.scrollHeight, body.offsetHeight,
             html.clientHeight, html.scrollHeight, html.offsetHeight);
-        iframe.height = height + "px";
+        iframe.height = height +16+ "px";
         if (iframe.id !== "apa-book")
             iframe.style.display = "none";
+        iframe.style.opacity="100";
+        iframe.style.position = "unset"
     }
 
     var drawer = mdc.drawer.MDCDrawer.attachTo(document.querySelector('.mdc-drawer'));
@@ -149,6 +147,7 @@
                 list[i].style.display = "unset";
             }
         }
+        window.scrollTo(0,0);
         drawer.open = false;
     }
 </script>
