--- a/src/main/webapp/citation-tools/apa-website.html
+++ b/src/main/webapp/citation-tools/apa-website.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="../css/flaticon.css">
     <link rel="stylesheet" href="../css/icomoon.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/citation.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.brown-red.min.css"/>
@@ -33,31 +34,19 @@
 </head>
 
 <body>
-<div style="text-align: center;padding: 24px">
+<div class="framePadding">
+    <br>
     <form>
         <div class="border" style="padding: 8px 16px 0 16px">
             <label style="color: darkred">Authors (choose one, comma separated list):</label>
             <!--        Author Name -->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-                 style="padding-bottom: 8px;width: 100%" onkeyup="updateResult()">
-                <input class="mdl-textfield__input" type="text" id="authors">
-                <label class="mdl-textfield__label" for="authors">Author's Name</label>
-                <div class="mdc-text-field-helper-line"><span
-                        class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent mdc-text-field-helper-text--validation-msg"
-                >Format: First Middle Last</span>
-                </div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="authors"
+                 onkeyup="updateResult()">
             </div>
-            <br>
 
-            <!--        Organization Name -->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-                 style="padding-bottom: 8px;width: 100%" onkeyup="updateResult()">
-                <input class="mdl-textfield__input" type="text" id="organization">
-                <label class="mdl-textfield__label" for="organization">Groups</label>
-                <div class="mdc-text-field-helper-line"><span
-                        class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent mdc-text-field-helper-text--validation-msg"
-                >e.g. United States Department of Education, U.S. Department of Commerce</span>
-                </div>
+            <!--        Group Name -->
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="group"
+                 onkeyup="updateResult()">
             </div>
         </div>
         <br>
@@ -65,80 +54,41 @@
         <div class="border" style="padding: 8px 16px 0 16px">
             <label>Website information:</label>
             <!--        Article title -->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-                 style="padding-bottom: 8px;width: 100%" onkeyup="updateResult()">
-                <input class="mdl-textfield__input" type="text" id="title">
-                <label class="mdl-textfield__label" for="title" style="color: darkred">Title of work</label>
-                <div class="mdc-text-field-helper-line"><span
-                        class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent mdc-text-field-helper-text--validation-msg"
-                >e.g. What is bitcoin?, First self-driving car</span>
-                </div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="title"
+                 onkeyup="updateResult()">
             </div>
-            <br>
 
             <!--        Date of Pub / Up -->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-                 style="padding-bottom: 8px;width: 100%" onkeyup="updateResult()">
-                <input class="mdl-textfield__input" type="text" id="date"
-                       pattern="((31|30|[1-2][0-9]|0[1-9]|[1-9])/)?(0[1-9]|1[0-2]|[1-9])/[1-9][0-9][0-9][0-9]">
-                <label class="mdl-textfield__label" for="date">Date of Publication or
-                    Update</label>
-                <div class="mdc-text-field-helper-line"><span
-                        class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent mdc-text-field-helper-text--validation-msg"
-                >Format: dd/mm/yyyy or mm/yyyy</span>
-                </div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="date"
+                 onkeyup="updateResult()">
             </div>
-            <br>
 
             <!--            Site name-->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-                 style="padding-bottom: 8px;width: 100%" onkeyup="updateResult()">
-                <input class="mdl-textfield__input" type="text" id="siteName">
-                <label class="mdl-textfield__label" for="siteName">Site name</label>
-                <div class="mdc-text-field-helper-line"><span
-                        class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent mdc-text-field-helper-text--validation-msg"
-                >e.g. GitHub, Amazon, w3school,...</span>
-                </div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="siteName"
+                 onkeyup="updateResult()">
             </div>
-            <br>
 
             <!--        URL-->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-                 style="padding-bottom: 8px;width: 100%" onkeyup="updateResult()">
-                <input class="mdl-textfield__input" type="text" id="url">
-                <label class="mdl-textfield__label" for="url" style="color: darkred">URL</label>
-                <div class="mdc-text-field-helper-line"><span
-                        class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent mdc-text-field-helper-text--validation-msg"
-                >e.g. http://www.gutenberg.org/ebooks/14264</span>
-                </div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="url"
+                 onkeyup="updateResult()">
             </div>
-            <br>
 
             <!--        Retrieved date-->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-                 style="padding-bottom: 8px;width: 100%" onkeyup="updateResult()">
-                <input class="mdl-textfield__input" type="text" id="retrieved"
-                       pattern="(31|30|[1-2][0-9]|0[1-9]|[1-9])/(0[1-9]|1[0-2]|[1-9])/[1-9][0-9][0-9][0-9]">
-                <label class="mdl-textfield__label" for="retrieved">Retrieved date</label>
-                <div class="mdc-text-field-helper-line"><span
-                        class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent mdc-text-field-helper-text--validation-msg"
-                >Format: dd/mm/yyyy</span>
-                </div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="retrieved"
+                 onkeyup="updateResult()">
             </div>
-            <br>
         </div>
         <br>
 
         <!--        Result -->
-        <div style="padding: 8px;height: 44px;border-style: solid;border-color: #1c7430;border-width: 1px;color: black">
-            <label id="result"
-                   class="float-left"
-                   style="width: calc(100% - 32px);white-space:nowrap;overflow: hidden;text-overflow: ellipsis;padding-top: 4px;text-align: left"
-            >Please type in more information!</label>
-            <i class="float-right material-icons" onmouseover="reset()" id="tt_copy" style="outline: none"
-               onclick="copyToClip(document.getElementById('result').innerHTML)">file_copy</i>
-            <div class="mdl-tooltip" for="tt_copy" id="tt_copy_text">
-            </div>
+        <div class="mdc-chip"  role="row" style="outline: none;max-width: 100%;white-space:nowrap;overflow: hidden;text-overflow: ellipsis;text-align: left;border-color: #1c7430" id="tt-copy" onclick=copyToClip(document.getElementById('result').innerHTML)>
+            <div class="mdc-chip__ripple" ></div>
+            <span role="gridcell"  style="outline: none;max-width: 100%;white-space:nowrap;overflow: hidden;text-overflow: ellipsis;text-align: left">
+                    <span id="result"  tabindex="0" class="mdc-chip__text" onmouseover="reset()"
+                    >Please type in more information!</span>
+                </span>
+        </div>
+        <div class="mdl-tooltip" for="tt-copy" id="tt_copy_text">
         </div>
 
         <br>
@@ -159,25 +109,54 @@
 
     </script>
     <script>
+        document.getElementById("authors").innerHTML = createTextBox("authors","Author's Name","Format: First Middle Last");
+        document.getElementById("group").innerHTML = createTextBox("group","Groups","e.g. United States Department of Education");
+        document.getElementById("title").innerHTML = createTextBox("title","Title of work","e.g. The best anime of 2019",true);
+        document.getElementById("date").innerHTML = createTextBox("date","Date of Publication or Update","Format: dd/mm/yyyy or mm/yyyy",false,"((31|30|[1-2][0-9]|0[1-9]|[1-9])/)?(0[1-9]|1[0-2]|[1-9])/[1-9][0-9][0-9][0-9]");
+        document.getElementById("siteName").innerHTML = createTextBox("siteName","Site name","e.g. GitHub, Amazon, w3school,...");
+        document.getElementById("url").innerHTML = createTextBox("url","URL","e.g. http://www.gutenberg.org/ebooks/14264",true);
+        document.getElementById("retrieved").innerHTML = createTextBox("retrieved","Retrieved date","Format: dd/mm/yyyy");
+
+
+        mdc.autoInit();
+        var authors;
+        var group;
+        var title;
+        var date;
+        var siteName;
+        var url;
+        var retrieved;
+
         function updateResult() {
-            var authors = $('#authors').val();
-            var organization = $('#organization').val();
-            var title = $('#title').val();
-            var date = $('#date').val();
-            var siteName = $('#siteName').val();
-            var url = $('#url').val();
-            var retrieved = $('#retrieved').val();
-            document.getElementById('result').innerHTML = getApaSite(authors, organization, title, date, siteName, url, retrieved);
+            var authors = $('#authors-textBox').val();
+            var group = $('#group-textBox').val();
+            var title = $('#title-textBox').val();
+            var date = $('#date-textBox').val();
+            var siteName = $('#siteName-textBox').val();
+            var url = $('#url-textBox').val();
+            var retrieved = $('#retrieved-textBox').val();
+            document.getElementById('result').innerHTML = getApaSite(authors, group, title, date, siteName, url, retrieved);
         }
         function clearAll() {
-            $('#authors')[0].parentElement.MaterialTextfield.change("");
-            $('#organization')[0].parentElement.MaterialTextfield.change("");
-            $('#title')[0].parentElement.MaterialTextfield.change("");
-            $('#date')[0].parentElement.MaterialTextfield.change("");
-            $('#siteName')[0].parentElement.MaterialTextfield.change("");
-            $('#url')[0].parentElement.MaterialTextfield.change("");
-            $('#retrieved')[0].parentElement.MaterialTextfield.change("");
+            $('#authors-textBox')[0].parentElement.MaterialTextfield.change("");
+            $('#group-textBox')[0].parentElement.MaterialTextfield.change("");
+            $('#title-textBox')[0].parentElement.MaterialTextfield.change("");
+            $('#date-textBox')[0].parentElement.MaterialTextfield.change("");
+            $('#siteName-textBox')[0].parentElement.MaterialTextfield.change("");
+            $('#url-textBox')[0].parentElement.MaterialTextfield.change("");
+            $('#retrieved-textBox')[0].parentElement.MaterialTextfield.change("");
             document.getElementById('result').innerHTML = "Please type in more information!";
+        }
+
+        function undoClear() {
+            $('#authors-textBox')[0].parentElement.MaterialTextfield.change(authors);
+            $('#group-textBox')[0].parentElement.MaterialTextfield.change(group);
+            $('#title-textBox')[0].parentElement.MaterialTextfield.change(title);
+            $('#date-textBox')[0].parentElement.MaterialTextfield.change(date);
+            $('#siteName-textBox')[0].parentElement.MaterialTextfield.change(siteName);
+            $('#url-textBox')[0].parentElement.MaterialTextfield.change(url);
+            $('#retrieved-textBox')[0].parentElement.MaterialTextfield.change(retrieved);
+            updateResult();
         }
     </script>
 </div>
