--- a/src/main/webapp/citation-tools/ieee-website.html
+++ b/src/main/webapp/citation-tools/ieee-website.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="../css/flaticon.css">
     <link rel="stylesheet" href="../css/icomoon.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/citation.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.brown-red.min.css"/>
@@ -29,12 +30,11 @@
 
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
-
-<div class="justify-content-center" style="text-align: center;padding: 24px">
+<div class="framePadding">
+    <br>
     <p>
         <img class="responsive" src="../images/Black_Man_Working_at_his_Laptop_on_the_Couch_Cartoon_Vector.svg"  style="max-height:384px;
     max-width:384px;
