--- a/src/main/webapp/citation-tools/apa-book.html
+++ b/src/main/webapp/citation-tools/apa-book.html
@@ -5,171 +5,79 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-    <link rel="stylesheet" href="../css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="../css/animate.css">
-
-    <link rel="stylesheet" href="../css/owl.carousel.min.css">
-    <link rel="stylesheet" href="../css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="../css/magnific-popup.css">
-
-    <link rel="stylesheet" href="../css/aos.css">
-
-    <link rel="stylesheet" href="../css/ionicons.min.css">
-
-    <link rel="stylesheet" href="../css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="../css/jquery.timepicker.css">
-
-
-    <link rel="stylesheet" href="../css/flaticon.css">
-    <link rel="stylesheet" href="../css/icomoon.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/citation.css">
-
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.brown-red.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
+
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
-    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-</head>
-
-<body>
-<div class="framePadding">
-    <br>
-    <form>
-        <div class="border" style="padding: 8px 16px 0 16px">
-            <label style="color: darkred">Authors (choose one, comma separated list):</label>
-
-            <!--        Author Name -->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="authors"
-                 onkeyup="updateResult()">
-            </div>
-
-            <!--        Editor Name -->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="editors"
-                 onkeyup="updateResult()">
-            </div>
-
-            <!--        Organization Name -->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="organization"
-                 onkeyup="updateResult()">
-            </div>
-
-        </div>
-        <br>
-
-        <div class="border" style="padding: 8px 16px 0 16px">
-            <label>Book information:</label>
-            <!--        Book title -->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="title"
-                 onkeyup="updateResult()">
-            </div>
-
-            <!--        Year of Pub, Edition -->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="year"
-                 onkeyup="updateResult()">
-            </div>
-
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="edition"
-                 onkeyup="updateResult()">
-            </div>
-
-            <!--        Publisher-->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="publisher"
-                 onkeyup="updateResult()">
-            </div>
-
-            <!--        URL-->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="url"
-                 onkeyup="updateResult()">
-            </div>
-
-        </div>
-        <br>
-
-        <!--        Result -->
-        <div class="mdc-chip"  role="row" style="outline: none;max-width: 100%;white-space:nowrap;overflow: hidden;text-overflow: ellipsis;text-align: left;border-color: #1c7430" id="tt-copy" onclick=copyToClip(document.getElementById('result').innerHTML)>
-            <div class="mdc-chip__ripple" ></div>
-            <span role="gridcell"  style="outline: none;max-width: 100%;white-space:nowrap;overflow: hidden;text-overflow: ellipsis;text-align: left">
-                    <span id="result"  tabindex="0" class="mdc-chip__text" onmouseover="reset()"
-                    >Please type in more information!</span>
-                </span>
-        </div>
-        <div class="mdl-tooltip" for="tt-copy" id="tt_copy_text">
-        </div>
-        <br> <br> <br> <br>
-        <div class="justify-content-center">
-            <button onclick="clearAll()" class="mdc-button mdc-button--outlined"
-                    style="outline: none;color: darkred;border-color: darkred"><span
-                    class="mdc-button__ripple"></span> Clear all
-            </button>
-        </div>
-    </form>
-
-
     <script src="../js/jquery.min.js"></script>
     <script src="../js/citation.js"></script>
+</head>
 
-    <script>
-        mdc.autoInit();
-        document.getElementById("authors").innerHTML = createTextBox("authors", "Author's Name", "Format: First Middle Last");
-        document.getElementById("editors").innerHTML = createTextBox("editors", "Editor's Name", "Format: First Middle Last");
-        document.getElementById("organization").innerHTML = createTextBox("organization", "Organizations, corporations, etc", "e.g. NXB Trẻ");
-        document.getElementById("title").innerHTML = createTextBox("title", "Title of book: Subtitle of book", "e.g. Just business: Business ethics in action, Verge", true);
-        document.getElementById("year").innerHTML = createTextBox("year", "Year of Publication", "e.g. 2000", true, "[0-9][0-9][0-9][0-9]");
-        document.getElementById("edition").innerHTML = createTextBox("edition", "Edition", "e.g 2, 23", false, "[0-9]+");
-        document.getElementById("publisher").innerHTML = createTextBox("publisher", "Publisher (*if is not an eBook)", "e.g. Oxford University Press", true);
-        document.getElementById("url").innerHTML = createTextBox("url", "URL (*if is an eBook)", "e.g. http://www.gutenberg.org/ebooks/14264", true);
+<body class="framePadding">
+<br>
+<form>
+    <div class="border" style="padding: 8px 16px 0 16px" id="box1">
+        <label style="color: darkred">Authors (choose one, comma separated list):</label>
+        <!--        Author Name -->
+        <!--        Editor Name -->
+        <!--        Organization Name -->
+    </div>
+    <br>
+    <div class="border" style="padding: 8px 16px 0 16px" id="box2">
+        <label>Book information:</label>
+        <!--        Book title -->
+        <!--        Year of Pub, Edition -->
+        <!--        Publisher-->
+        <!--        URL-->
+    </div>
+    <br>
+    <!--        Result -->
+</form>
+<script>
+    mdc.autoInit();
+    document.getElementById("box1").innerHTML +=
+        createTextBox("authors",
+            "Author's Name",
+            "Format: First Middle Last") +
+        createTextBox("editors",
+            "Editor's Name",
+            "Format: First Middle Last") +
+        createTextBox("organization",
+            "Organizations, corporations, etc",
+            "e.g. NXB Trẻ");
+    document.getElementById("box2").innerHTML +=
+        createTextBox("title",
+            "Title of book: Subtitle of book",
+            "e.g. Just business: Business ethics in action, Verge", true) +
+        createTextBox("year",
+            "Year of Publication",
+            "e.g. 2000", true,
+            "[0-9][0-9][0-9][0-9]") +
+        createTextBox("edition",
+            "Edition",
+            "e.g 2, 23", false,
+            "[0-9]+") +
+        createTextBox("publisher",
+            "Publisher (*if is not an eBook)",
+            "e.g. Oxford University Press", true) +
+        createTextBox("url",
+            "URL (*if is an eBook)",
+            "e.g. http://www.gutenberg.org/ebooks/14264", true);
+    document.body.innerHTML += createResultField();
 
+    var list = document.getElementsByClassName("mdl-textfield__input");
+    var lastValue = [];
 
-        var authors;
-        var editors;
-        var organization;
-        var title;
-        var year;
-        var edition;
-        var publisher;
-        var url;
-
-        function updateResult() {
-            authors = $('#authors-textBox').val();
-            editors = $('#editors-textBox').val();
-            organization = $('#organization-textBox').val();
-            title = $('#title-textBox').val();
-            year = $('#year-textBox').val();
-            edition = $('#edition-textBox').val();
-            publisher = $('#publisher-textBox').val();
-            url = $('#url-textBox').val();
-            //$('#result-textBox')[0].parentElement.MaterialTextfield.change(getApaBook(authors, editors, organization, title, year, edition, publisher, url));
-            document.getElementById('result').innerHTML = getApaBook(authors, editors, organization, title, year, edition, publisher, url);
+    function updateResult() {
+        for (var i = 0; i < list.length; i++) {
+            lastValue[i] = list[i].value;
         }
-
-        function clearAll() {
-            $('#authors-textBox')[0].parentElement.MaterialTextfield.change("");
-            $('#editors-textBox')[0].parentElement.MaterialTextfield.change("");
-            $('#organization-textBox')[0].parentElement.MaterialTextfield.change("");
-            $('#title-textBox')[0].parentElement.MaterialTextfield.change("");
-            $('#year-textBox')[0].parentElement.MaterialTextfield.change("");
-            $('#edition-textBox')[0].parentElement.MaterialTextfield.change("");
-            $('#publisher-textBox')[0].parentElement.MaterialTextfield.change("");
-            $('#url-textBox')[0].parentElement.MaterialTextfield.change("");
-            document.getElementById('result').innerHTML = "Please type in more information!";
-        }
-
-        function undoClear() {
-            $('#authors-textBox')[0].parentElement.MaterialTextfield.change(authors);
-            $('#editors-textBox')[0].parentElement.MaterialTextfield.change(editors);
-            $('#organization-textBox')[0].parentElement.MaterialTextfield.change(organization);
-            $('#title-textBox')[0].parentElement.MaterialTextfield.change(title);
-            $('#year-textBox')[0].parentElement.MaterialTextfield.change(year);
-            $('#edition-textBox')[0].parentElement.MaterialTextfield.change(edition);
-            $('#publisher-textBox')[0].parentElement.MaterialTextfield.change(publisher);
-            $('#url-textBox')[0].parentElement.MaterialTextfield.change(url);
-            updateResult();
-        }
-    </script>
-</div>
+        document.getElementById('result').innerHTML = getApaBook(lastValue);
+    }
+</script>
 </body>
-
 </html>
