--- a/src/main/webapp/citation-tools/apa-website.html
+++ b/src/main/webapp/citation-tools/apa-website.html
@@ -3,163 +3,78 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-    <link rel="stylesheet" href="../css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="../css/animate.css">
-
-    <link rel="stylesheet" href="../css/owl.carousel.min.css">
-    <link rel="stylesheet" href="../css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="../css/magnific-popup.css">
-
-    <link rel="stylesheet" href="../css/aos.css">
-
-    <link rel="stylesheet" href="../css/ionicons.min.css">
-
-    <link rel="stylesheet" href="../css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="../css/jquery.timepicker.css">
-
-
-    <link rel="stylesheet" href="../css/flaticon.css">
-    <link rel="stylesheet" href="../css/icomoon.css">
+    <meta name="viewport"
+          content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/citation.css">
-
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.brown-red.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
+
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
-    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-</head>
-
-<body>
-<div class="framePadding">
-    <br>
-    <form>
-        <div class="border" style="padding: 8px 16px 0 16px">
-            <label style="color: darkred">Authors (choose one, comma separated list):</label>
-            <!--        Author Name -->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="authors"
-                 onkeyup="updateResult()">
-            </div>
-
-            <!--        Group Name -->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="group"
-                 onkeyup="updateResult()">
-            </div>
-        </div>
-        <br>
-
-        <div class="border" style="padding: 8px 16px 0 16px">
-            <label>Website information:</label>
-            <!--        Article title -->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="title"
-                 onkeyup="updateResult()">
-            </div>
-
-            <!--        Date of Pub / Up -->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="date"
-                 onkeyup="updateResult()">
-            </div>
-
-            <!--            Site name-->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="siteName"
-                 onkeyup="updateResult()">
-            </div>
-
-            <!--        URL-->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="url"
-                 onkeyup="updateResult()">
-            </div>
-
-            <!--        Retrieved date-->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label textFieldStyle" id="retrieved"
-                 onkeyup="updateResult()">
-            </div>
-        </div>
-        <br>
-
-        <!--        Result -->
-        <div class="mdc-chip"  role="row" style="outline: none;max-width: 100%;white-space:nowrap;overflow: hidden;text-overflow: ellipsis;text-align: left;border-color: #1c7430" id="tt-copy" onclick=copyToClip(document.getElementById('result').innerHTML)>
-            <div class="mdc-chip__ripple" ></div>
-            <span role="gridcell"  style="outline: none;max-width: 100%;white-space:nowrap;overflow: hidden;text-overflow: ellipsis;text-align: left">
-                    <span id="result"  tabindex="0" class="mdc-chip__text" onmouseover="reset()"
-                    >Please type in more information!</span>
-                </span>
-        </div>
-        <div class="mdl-tooltip" for="tt-copy" id="tt_copy_text">
-        </div>
-
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="justify-content-center">
-            <button onclick="clearAll()" class="mdc-button mdc-button--outlined"
-                    style="outline: none;color: darkred;border-color: darkred"><span
-                    class="mdc-button__ripple"></span> Clear all
-            </button>
-        </div>
-    </form>
-
     <script src="../js/jquery.min.js"></script>
     <script src="../js/citation.js"></script>
-    <script>
+</head>
 
-    </script>
-    <script>
-        document.getElementById("authors").innerHTML = createTextBox("authors","Author's Name","Format: First Middle Last");
-        document.getElementById("group").innerHTML = createTextBox("group","Groups","e.g. United States Department of Education");
-        document.getElementById("title").innerHTML = createTextBox("title","Title of work","e.g. The best anime of 2019",true);
-        document.getElementById("date").innerHTML = createTextBox("date","Date of Publication or Update","Format: dd/mm/yyyy or mm/yyyy",false,"((31|30|[1-2][0-9]|0[1-9]|[1-9])/)?(0[1-9]|1[0-2]|[1-9])/[1-9][0-9][0-9][0-9]");
-        document.getElementById("siteName").innerHTML = createTextBox("siteName","Site name","e.g. GitHub, Amazon, w3school,...");
-        document.getElementById("url").innerHTML = createTextBox("url","URL","e.g. http://www.gutenberg.org/ebooks/14264",true);
-        document.getElementById("retrieved").innerHTML = createTextBox("retrieved","Retrieved date","Format: dd/mm/yyyy");
+<body class="framePadding">
+<br>
+<form id="form">
+    <div class="border" style="padding: 8px 16px 0 16px" id="box1">
+        <label style="color: darkred">Authors (choose one, comma separated list):</label>
+        <!-- Author Name -->
+        <!-- Group Name -->
+    </div>
+    <br>
+    <div class="border" style="padding: 8px 16px 0 16px" id="box2">
+        <label>Website information:</label>
+        <!-- Article title -->
+        <!-- Date of Pub / Up -->
+        <!-- Site name-->
+        <!-- URL-->
+        <!-- Retrieved date-->
+    </div>
+    <br>
+    <!-- Result -->
+</form>
+<script>
+    mdc.autoInit();
+    document.getElementById("box1").innerHTML +=
+        createTextBox("authors",
+            "Author's Name",
+            "Format: First Middle Last") +
+        createTextBox("group",
+            "Groups",
+            "e.g. United States Department of Education");
+    document.getElementById("box2").innerHTML +=
+        createTextBox("title",
+            "Title of work",
+            "e.g. The best anime of 2019", true) +
+        createTextBox("date",
+            "Date of Publication or Update",
+            "Format: dd/mm/yyyy or mm/yyyy", false,
+            "((31|30|[1-2][0-9]|0[1-9]|[1-9])/)?(0[1-9]|1[0-2]|[1-9])/[1-9][0-9][0-9][0-9]") +
+        createTextBox("siteName",
+            "Site name",
+            "e.g. GitHub, Amazon, w3school,...") +
+        createTextBox("url",
+            "URL",
+            "e.g. http://www.gutenberg.org/ebooks/14264", true) +
+        createTextBox("retrieved",
+            "Retrieved date",
+            "Format: dd/mm/yyyy", false,
+            "(31|30|[1-2][0-9]|0[1-9]|[1-9])/(0[1-9]|1[0-2]|[1-9])/[1-9][0-9][0-9][0-9]");
+    document.body.innerHTML += createResultField();
 
+    var list = document.getElementsByClassName("mdl-textfield__input");
+    var lastValue = [];
 
-        mdc.autoInit();
-        var authors;
-        var group;
-        var title;
-        var date;
-        var siteName;
-        var url;
-        var retrieved;
-
-        function updateResult() {
-            var authors = $('#authors-textBox').val();
-            var group = $('#group-textBox').val();
-            var title = $('#title-textBox').val();
-            var date = $('#date-textBox').val();
-            var siteName = $('#siteName-textBox').val();
-            var url = $('#url-textBox').val();
-            var retrieved = $('#retrieved-textBox').val();
-            document.getElementById('result').innerHTML = getApaSite(authors, group, title, date, siteName, url, retrieved);
+    function updateResult() {
+        for (var i = 0; i < list.length; i++) {
+            lastValue[i] = list[i].value;
         }
-        function clearAll() {
-            $('#authors-textBox')[0].parentElement.MaterialTextfield.change("");
-            $('#group-textBox')[0].parentElement.MaterialTextfield.change("");
-            $('#title-textBox')[0].parentElement.MaterialTextfield.change("");
-            $('#date-textBox')[0].parentElement.MaterialTextfield.change("");
-            $('#siteName-textBox')[0].parentElement.MaterialTextfield.change("");
-            $('#url-textBox')[0].parentElement.MaterialTextfield.change("");
-            $('#retrieved-textBox')[0].parentElement.MaterialTextfield.change("");
-            document.getElementById('result').innerHTML = "Please type in more information!";
-        }
-
-        function undoClear() {
-            $('#authors-textBox')[0].parentElement.MaterialTextfield.change(authors);
-            $('#group-textBox')[0].parentElement.MaterialTextfield.change(group);
-            $('#title-textBox')[0].parentElement.MaterialTextfield.change(title);
-            $('#date-textBox')[0].parentElement.MaterialTextfield.change(date);
-            $('#siteName-textBox')[0].parentElement.MaterialTextfield.change(siteName);
-            $('#url-textBox')[0].parentElement.MaterialTextfield.change(url);
-            $('#retrieved-textBox')[0].parentElement.MaterialTextfield.change(retrieved);
-            updateResult();
-        }
-    </script>
-</div>
+        document.getElementById('result').innerHTML = getApaSite(lastValue);
+    }
+</script>
 </body>
-
 </html>
