--- a/src/main/webapp/citation-tools/apa-book.html
+++ b/src/main/webapp/citation-tools/apa-book.html
@@ -23,6 +23,17 @@
     <div class="border" style="padding: 8px 16px 0 16px" id="box1">
         <label style="color: darkred">Authors (choose one, comma separated list):</label>
         <!--        Author Name -->
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+             style="padding-bottom: 8px;width: 100%;" onkeyup="updateResult()">
+            <input class="mdl-textfield__input" type="text" id="title">
+            <label class="mdl-textfield__label" for="title" style="font-family: Arial,sans-serif;color: darkred">Title of book: Subtitle of
+                book</label>
+            <div class="mdc-text-field-helper-line"><span
+                    class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent mdc-text-field-helper-text--validation-msg"
+
+            >e.g. Bộ business: Business ethics in action, Introduce to C#</span>
+            </div>
+        </div>
         <!--        Editor Name -->
         <!--        Organization Name -->
     </div>
